# zero_gecko

./: .gitignore  50-jlink.rules  README.md  gcc_cortex_m.cmake
apps/: CMakeLists.txt
apps/blink/: CMakeLists.txt  blink.c
apps/blink_qpn/: .blink_qpn  CMakeLists.txt  blink.c  blink.h  blink_qpn.qm  bsp.c  bsp_.h  displayconfigapp.h  main.c  qpn_port.h
apps/display_test/: CMakeLists.txt  bsp.c  bsp_.h  display_test.c  display_test.h  display_test_qpn.qm  displayconfigapp.h  image.h  main.c
apps/emlcd/: CMakeLists.txt  displayconfigapp.h  emlcd.c
cmake/Modules/: FindEmLib.cmake
emlib/: .gitignore  CMakeLists.txt  efm32.ld.in
emlib-template/: CMakeLists.txt
examples/: CMakeLists.txt
examples/blink/: CMakeLists.txt
