PROJECT(zero-gecko)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
ENABLE_LANGUAGE(ASM)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
	"../cmake/Modules/")

FIND_PACKAGE(EmLib REQUIRED)

IF(NOT CMSIS_DIR)
	MESSAGE(FATAL_ERROR "No CMSIS_DIR specified")
ENDIF()

EMLIB_CONFIGURE_LINKER_SCRIPT()
SET(CMAKE_EXE_LINKER_FLAGS
	"${CMAKE_EXE_LINKER_FLAGS} -Wl,-Map=${CMAKE_PROJECT_NAME}.map")

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${EMLIB_INCLUDE_DIR}
    ${EMLIB_FAMILY_INCLUDE_DIR}
	${CMSIS_DIR}/Include
	${CMAKE_SOURCE_DIR}/../bsp
	${CMAKE_SOURCE_DIR}/../config
)

FILE(GLOB BSP_SOURCES
    "${CMAKE_SOURCE_DIR}/../bsp/*.c"
)

ADD_SUBDIRECTORY(blink)
