ADD_EXECUTABLE(blink.elf blink.c ${BSP_SOURCES} ${EMLIB_SYSTEM_SOURCE} ${EMLIB_STARTUP_SOURCE})
TARGET_LINK_LIBRARIES(blink.elf ${EMLIB_LIBRARIES})
ADD_CUSTOM_COMMAND(TARGET blink.elf
	POST_BUILD COMMAND
	${CMAKE_OBJDUMP} ARGS -S blink.elf > blink.lst
)
ADD_CUSTOM_COMMAND(TARGET blink.elf
	POST_BUILD COMMAND
	${CMAKE_OBJCOPY} ARGS -Obinary blink.elf blink.bin
)
